Rename SecretSource to SecretStore
